<resources>
    <string name="app_name">Workyzo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email_address">Email address</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm Password</string>

    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="Username">Username</string>
    <string name="Login">Login</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Create">Create</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="Signin_facebook">Sign in with Facebook</string>
    <string name="Forgotpassword_Title">FORGOT PASSWORD?</string>
    <string name="Create_acoount">Create Account</string>
    <string name="Or_dash">-----   Or   -----</string>
    <string name="Or">OR</string>
    <string name="Reset_Password">Reset password </string>
    <string name="Open_Email">Open email app</string>
    <string name="No_account">Don\'t have an account?</string>
    <string name="Reset_text">
        Please enter the email associated with your account and we will
        send an email with  instructions to reset your password.
    </string>

    <string name="Skills_required_hint">Enter up to 5 skills that best describe your job.\nFreelancer will use these skills to find jobs they\nare most interested and experienced in</string>
    <string name="HourlyRatetxt_hint">Hire based on an hourly rate and
    pay for hours billed.Best for
    ongoing work.</string>
    <string name="FixedPricetxt_hint">Agree on a price and release
    payment when the job is done.
    Best for one-off tasks.</string>
    <string name="Proposal_hint">What makes you the best candidate for this project?</string>
    <string name="Proposal_EditBid_hint">You can submit a bid only and you will be able to edit it until the job is awarded to someone.</string>

    <string name="Fullname">Full Name</string>
    <string name="Address">Address</string>
    <string name="Mobile_number">Mobile number</string>
    <string name="Gender">Select gender</string>
    <string name="Title_position">Enter your position or title</string>
    <string name="company_name">Enter company name</string>
    <string name="month">Select month</string>
    <string name="year">Select year</string>
    <string name="present_job">I\'m  currently working here</string>
    <string name="experience_summary">Describe your work experience</string>
    <string name="Change_profilepic">Change profile picture</string>
    <string name="Add_Language">Add Language</string>
    <string name="Add_Experience">Add Experience</string>
    <string name="Add_Education">Add Education</string>
    <string name="Add_Skills">Add Skills</string>
    <string name="NoLanguages">No languages have been added.</string>
    <string name="NoExperience">No experiences have been added.</string>
    <string name="NoEducation">No education information has been added.</string>
    <string name="NoTopSkills">No skills have been added.</string>
    <string name="Account_type">Account type</string>
    <string name="Salary">Salary</string>
    <string name="Salary_type">Salary type</string>
    <string name="Select_skills">Select your skills and expertise</string>
    <string name="Long_Dash">------------------------------------------</string>
    <string name="Select_Category">Select a category</string>
    <string name="View_more">View More</string>

    <string name="ResetPassword_Email1">A password reset email has been sent to</string>
    <string name="ResetPassword_Email2">. Follow the instructions in the email sent to reset your password</string>
    <string name="CheckEmail_title">Password Reset Email Sent</string>
    <string name="Verify_Account">Verify your account</string>
    <string name="Verify_Email1">A verification email has been sent to</string>
    <string name="Veridy_Email2">. Please check your mailbox to verify your account before you login.</string>
    <string name="Signup_Success">Account Created Successfully</string>
    <string name="Login_Failed">Failed to sign in please check your credentials and try again</string>

    <!-- Error labels-->
    <string name="RequiredField_Error">Required field*</string>
    <string name="BidAmountRange_Error">Bid price out of range </string>
    <string name="PasswordConfirm_Error">The password confirmation does not match</string>
    <string name="ValidEmail_Error">Valid email required</string>


    <!-- Menu -->
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Chat">Chat</string>
    <string name="Agenda">Agenda</string>
    <string name="Settings">Settings</string>
</resources>