<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.addexperience">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputpositiontitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputpositiontitletxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="true"
            android:fontFamily="@font/open_sans"
            android:hint="@string/Title_position"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputcompany"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputpositiontitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputcompanytxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="true"
            android:fontFamily="@font/open_sans"
            android:hint="@string/company_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/startlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="Start"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputcompany" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputstartmonth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:layout_marginTop="5dp"
        android:hint="@string/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startlabel">

        <AutoCompleteTextView
            android:id="@+id/autoCompletestartmonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputstarteduyear"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:layout_marginTop="5dp"
        android:hint="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputstartmonth"
        app:layout_constraintTop_toBottomOf="@+id/startlabel">

        <AutoCompleteTextView
            android:id="@+id/autoCompletestartyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/presentjobcheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/SkyBlue"
        android:fontFamily="@font/open_sans"
        android:text="@string/present_job"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputstartmonth" />

    <TextView
        android:id="@+id/Endlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="End"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presentjobcheckbox" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputendmonth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:layout_marginTop="5dp"
        android:hint="@string/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Endlabel">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteendmonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputendyear"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:layout_marginTop="5dp"
        android:hint="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputstartmonth"
        app:layout_constraintTop_toBottomOf="@+id/Endlabel">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteendyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputexpSummary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:hint="@string/experience_summary"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputendmonth">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputexpSummarytxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans"
            android:gravity="start"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Expcancelbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="Cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputexpSummary" />

    <Button
        android:id="@+id/expsavebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="Save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toEndOf="@+id/Expcancelbtn"
        app:layout_constraintTop_toBottomOf="@+id/inputexpSummary" />


</androidx.constraintlayout.widget.ConstraintLayout>